<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TableLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!--<com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-2613488639187412/6980628685"
            ads:loadAdOnCreate="true"/> -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="ca-app-pub-2613488639187412/3201153084"
            ads:adSize="SMART_BANNER"/>
        <!-- ads:loadAdOnCreate="true"/> -->

        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/spot_level_literal"/>
            <EditText
                android:id="@+id/spot_level"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="1.00"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/strike_literal"/>
            <EditText
                android:id="@+id/strike"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="0.80"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/rate_literal"/>
            <EditText
                android:id="@+id/rate"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="0.00462"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/dividend_literal"/>
            <EditText
                android:id="@+id/dividend"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="0.00145"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/maturity_literal"/>
            <EditText
                android:id="@+id/maturity"
                android:editable="false"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="1.0"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/volatility_literal"/>
            <EditText
                android:id="@+id/volatility"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="0.05"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/price_literal"/>
            <EditText
                android:id="@+id/price"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="0.05"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:text="@string/european_type_literal"/>
            <Spinner
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </TableRow>
        <Button android:text="@string/solve_literal"
            android:id="@+id/solveButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        </Button>
    </TableLayout>
</ScrollView>
